feat: operations without caching
